--- a/assets/css/login-style.css
+++ b/assets/css/login-style.css
@@ -1,180 +1,194 @@
-#background{
-    min-height: 1050px;
-    width: 100%;
-    
-    }
-    
-    #top{
-    height: 35px;
-    width: 100%;
-    background:#2c7ad6;
-    line-height: 35px;
-    padding: 0px 20px 9px 100px;
-    box-sizing: border-box;
-    word-spacing:10px ;
-    
-    }
-    #menu{
-    height: 65px;
-    width: 100%;
-    background:green;
-    
-    }
-    #logo{
-    height: 65px;
-    width: 40%;
-    background:white;
+body {
+    background-color: rgba(55, 65, 81, 1); 
+}
+
+  .form-container {
+  
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 320px;
+    border-radius: 0.75rem;
+    background-color: rgba(17, 24, 39, 1);
+    padding: 2rem;
+    color: rgba(243, 244, 246, 1);
+    margin: 40px auto;
+  }
+  
+  .title {
     text-align: center;
-    line-height: 65px;
-    font-size: 40px;
-    float: left;
-    }
-    #menu1{
-    
-    height: 65px;
-    width: 60%;
-    background:white;
-    float: left;
-    
-    }
-    #menu1 UL{
-    list-style: none;
-    padding-left: 200px;
-    box-sizing: border-box;
-    
-    }
-    #menu1 LI{
-    height: 45px;
-    width: 130px;
-    
-    text-align: center ;
-    display: inline-block;
-    line-height: 45px;
-    transform: translateY(-5px);
-    color: black;
-    font-size: 20px;
-    
-    }
-    #menu1 LI:hover{
-    background: #2c7ad6;
-    
-    color: white;
-    transition: all ease 1s;
-    border-radius: 3px;
-    }
-    
-    #slider{
-    height:640px;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+  }
+  
+  .form {
+    margin-top: 1.5rem;
+  }
+  
+  .input-group {
+    margin-top: 0.25rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+  
+  .input-group label {
+    display: block;
+    color: rgba(156, 163, 175, 1);
+    margin-bottom: 4px;
+  }
+  
+  .input-group input {
     width: 100%;
-    background:url(image/4.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    /* animation-name:slider;
-    animation-duration: 20s;
-    animation-iteration-count:infinite ;
-    animation-delay: 3s;*/
-    }
-    /*
-    @keyframes slider{
-    
-    from{
-    background:url(image/4.jpg);
-    background-size: cover;
-    background-attachment: fixed;
-    }
-    to{
-    background:url(image/4.jpg);
-    
-    background-size: cover;
-    background-attachment: fixed;
-    }
-    }
-    */
-    #x{
-    height:640px;
-    width: 40%;
-    background:rgba(0,0,0, .4);
-    float: left;
-    font-size: 41PX;
-    color: white;
+    border-radius: 0.375rem;
+    border: 1px solid rgba(55, 65, 81, 1);
+    outline: 0;
+    background-color: rgba(17, 24, 39, 1);
+    padding: 0.75rem 1rem;
+    color: rgba(243, 244, 246, 1);
+  }
+  
+  .input-group input:focus {
+    border-color: rgba(167, 139, 250);
+  }
+  
+  .forgot {
+    display: flex;
+    justify-content: flex-end;
+    font-size: 0.75rem;
+    line-height: 1rem;
+    color: rgba(156, 163, 175,1);
+    margin: 8px 0 14px 0;
+  }
+  
+  .forgot a,.signup a {
+    color: rgba(243, 244, 246, 1);
+    text-decoration: none;
+    font-size: 14px;
+  }
+  
+  .forgot a:hover, .signup a:hover {
+    text-decoration: underline rgba(167, 139, 250, 1);
+  }
+  
+  .sign {
+    display: block;
+    width: 100%;
+    background-color: rgba(167, 139, 250, 1);
+    padding: 0.75rem;
     text-align: center;
-    padding-top: 250px;
-    box-sizing: border-box;
+    color: rgba(17, 24, 39, 1);
+    border: none;
+    border-radius: 0.375rem;
+    font-weight: 600;
+    transition: background-color 0.2s, box-shadow 0.2s;
+  }
+
+  .sign:hover {
+    background-color: #23527c;
+    box-shadow: 0 0 0 2px #337ab7;
+    transform: translateY(-1px);
+  }
+  
+  .sign:active {
+    background-color: #1d4f7a; 
+    box-shadow: 0 2px 0 #23527c;
+    transform: translateY(1px); 
+  }
+  
+  .sign:active::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 0;
+    height: 0;
+    border-radius: 50%;
+    background-color: #fff;
+    animation: ripple 0.5s;
+  }
+
+  @keyframes ripple {
+    0% {
+      width: 0;
+      height: 0;
+      opacity: 0.5;
     }
-    #y{
-    height:640px;
-    width: 30%;
-    background:rgba(0,0,0, .4);
-    float: left;
-    
+    100% {
+      width: 100%;
+      height: 100%;
+      opacity: 0;
     }
-    #z{
-    height:640px;
-    
-    width: 30%;
-    background:rgba(0,0,0, .4);
-    float: left;
-    }
-    #l{
-    height:450px;
-    width: 80%;
-    background:rgba(255,255,255, .6);
-    float: left;
-    margin: 90px;
-    border-radius: 7px ;
-    
-    }
-    #l:hover{
-    background:linear-gradient(45deg,rgba(50,177,40, .6),rgba(255,255,255,
-    .6));
-    }
-    
-    #r{
-    height:450px;
-    width: 80%;
-    background:rgba(44,122,214, .6);
-    float: left;
-    margin: 90px auto;
-    border-radius: 7px ;
-    
-    }
-    
-    #r:hover{
-    background:linear-gradient(45deg,rgba(50,177,40, .6),rgba(255,255,255,
-    .6));
-    }
-    #student{
-    margin:50px 50px;
-    color:blue;
-    
-    }
-    #Teacher{
-    margin:50px 50px;
-    color:white;
-    }
-    .t{
-    height: 40px;
-    width: 100%;
-    border: 2px solid green;
-    border-radius: 4px;
-    box-sizing: border-box;
-    margin-bottom: 15px;
-    
-    }
-    #down{
-    height: 300px;
-    width: 100%;
-    margin-top: 10px;
-    background:#2c7ad6;
-    
+  }
+  
+  .social-message {
+    display: flex;
+    align-items: center;
+    padding-top: 1rem;
+  }
+  
+  .line {
+    height: 1px;
+    flex: 1 1 0%;
+    background-color: rgba(55, 65, 81, 1);
+  }
+  
+  .social-message .message {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    color: rgba(156, 163, 175, 1);
+  }
+  
+  .social-icons {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .social-icons .icon {
+    border-radius: 0.125rem;
+    padding: 0.75rem;
+    border: none;
+    background-color: transparent;
+    margin-left: 8px;
+  }
+  
+  .social-icons .icon svg {
+    height: 1.25rem;
+    width: 1.25rem;
+    fill: #fff;
+  }
+  
+  .signup {
     text-align: center;
-    padding-top: 10px;
-    color: white;
-    }
-    .footer{
-    height: 20px;
-    width: 100%;
-    background: black;
-    color: white;
-    text-align: center;
-    }
+    font-size: 0.75rem;
+    line-height: 1rem;
+    color: rgba(156, 163, 175, 1);
+  }
+
+.social-icons .icon {
+  border-radius: 0.125rem;
+  padding: 0.75rem;
+  border: none;
+  background-color: transparent;
+  margin-left: 8px;
+}
+
+.social-icons .icon:hover {
+  border: 1px solid rgba(55, 65, 81, 1); 
+  box-shadow: 0 0 0 1px rgba(55, 65, 81, 0.5);
+}
+
+.social-icons .icon svg {
+  height: 1.25rem;
+  width: 1.25rem;
+  fill: #fff;
+}
+
+.social-icons .icon:hover {
+  border-color: rgba(167, 139, 250, 1);
+  box-shadow: 0 0 0 2px rgba(167, 139, 250, 1);
+}
